@@ -14,6 +14,8 @@
 // You should have received a copy of the GNU General Public License
 // along with Moodle-oembed-Filter.  If not, see <http://www.gnu.org/licenses/>.
 
+defined('MOODLE_INTERNAL') || die();
+
 /**
  * Filter for component 'filter_oembed'
  *
