@@ -24,6 +24,8 @@
 
 namespace filter_oembed\provider;
 
+defined('MOODLE_INTERNAL') || die();
+
 /**
  * oEmbed provider implementation for ISSUU
  */
