@@ -23,6 +23,8 @@
 
 namespace filter_oembed\provider;
 
+defined('MOODLE_INTERNAL') || die();
+
 /**
  * oEmbed provider implementation for Docs.com
  */
