@@ -16,7 +16,7 @@
     position: absolute;
     top: 0;
     color: #fff;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     padding: 0.5em 0.5em;
 }
 
@@ -34,8 +34,8 @@
     background-image: url([[pix:filter_oembed|play]]);
     background-repeat: no-repeat;
     position: absolute;
-    top: calc(50% - 15%/2);
-    left: calc(50% - 15%/2);
+    top: calc(50% - 15% / 2);
+    left: calc(50% - 15% / 2);
     width: 15%;
     padding-top: 15%;
     margin: 0;
@@ -47,7 +47,7 @@
 
 .btn.btn-link.oembed-card-play:hover {
     background-position: 0;
-    filter: drop-shadow(0px 0px 0px #666);
+    filter: drop-shadow(0 0 0 #666);
     opacity: 1;
 }
 
