@@ -34,13 +34,13 @@
     background-repeat: no-repeat;
     filter: drop-shadow(1px 1px 1px #666);
     left: -webkit-calc(50% - 15%/2);
-    left: calc(50% - 15%/2);
+    left: calc(50% - 15% / 2);
     margin: 0;
     opacity: 0.9;
     padding-top: 15%;
     position: absolute;
     top: -webkit-calc(50% - 15%/2);
-    top: calc(50% - 15%/2);
+    top: calc(50% - 15% / 2);
     transition: all 0.4s ease-in-out;
     width: 15%;
     -webkit-transition: all 0.4s ease-in-out;
@@ -50,7 +50,7 @@
 .btn.btn-link.oembed-card-play:hover {
     background-position: 0;
     -webkit-filter: drop-shadow(0px 0px 0px #666);
-    filter: drop-shadow(0px 0px 0px #666);
+    filter: drop-shadow(0 0 0 #666);
     opacity: 1;
 }
 
