@@ -41,9 +41,6 @@
                 "deleteaction": "http://localhost/moodlehq.git/filter/oembed/manageproviders.php?action=delete&pid=1&sesskey=dvBXP9rX1G",
                 "extraclass": "dimmed_text"
             },
-            {
-            ...
-            }
         ]
     }
     }}
